HH-fibers: replaced newFixedThreadPool by newVirtualThreadPerTaskExecutor